syntax = "proto3";

option java_package = "org.sorapointa.proto";

message AvatarTeam {
  repeated uint64 avatar_guid_list = 13;
  string team_name = 4;
}
